--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/adapter-neon": "^6.3.0",
+    "@pusher/push-notifications-web": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -24,6 +25,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.5",
@@ -48,6 +50,7 @@
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "emoji-picker-react": "^4.12.2",
@@ -60,11 +63,14 @@
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.4",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.0.2",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^2.15.1",
     "resend": "^4.2.0",
@@ -73,10 +79,11 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-font-size": "^1.2.0",
+    "twilio": "^5.8.0",
     "uploadthing": "^7.5.2",
     "vaul": "^1.1.2",
     "ws": "^8.18.0",
-    "zod": "^3.24.1"
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
