--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@paypal/react-paypal-js": "^8.8.2",
-    "@prisma/adapter-neon": "^6.3.0",
+    "@prisma/adapter-neon": "^6.16.2",
     "@pusher/push-notifications-web": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -50,6 +50,8 @@
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "color-name": "^2.0.2",
+    "color-namer": "^1.4.0",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
@@ -67,10 +69,10 @@
     "pusher-js": "^8.4.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.0.2",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^2.15.1",
     "resend": "^4.2.0",
@@ -82,24 +84,26 @@
     "twilio": "^5.8.0",
     "uploadthing": "^7.5.2",
     "vaul": "^1.1.2",
-    "ws": "^8.18.0",
+    "ws": "^8.18.3",
     "zod": "^3.25.49"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.16.2",
+    "@types/color-name": "^2.0.0",
+    "@types/color-namer": "^1.3.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/ws": "^8.5.14",
+    "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^6.3.0",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-rtl": "^0.9.0",
     "ts-jest": "^29.2.6",
