--- a/package.json
+++ b/package.json
@@ -61,16 +61,16 @@
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.474.0",
-    "next": "15.2",
+    "next": "^16.1.2",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.4",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.9.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-email": "^4.0.2",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^5.0.0",
